--- a/css/style3.css
+++ b/css/style3.css
@@ -23,9 +23,9 @@ body{
 	height:100px;
 	
 	}
-.Contenedor{
+.Contenedor2{
 
-	color:rgb(168, 167, 167);
+	color: rgb(250, 150, 0);
 	margin-top: 150px;
 
 
@@ -65,11 +65,6 @@ body{
 	background-color: rgb(236, 236, 236);
 	
 	
-		
-	
-
-   
-	
 }
 
 .nav a{
@@ -91,38 +86,6 @@ body{
     transition: 700ms;
     text-decoration: none;
 }
-
-h2{
-	text-align: left;
-}
-
-
-
-
-
-
-
-
-
-
-h1,h2,h3,h4{
-	color:#0b6580;
-	text-align: center;
-}
-
-
-
-
-
-.CentrarImg{
-
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-
-
 
 
 
